syntax = "proto3";
package smartRetail;

service SmartShelf {
    rpc getPrice (getPriceRequest) return (getPriceResponse);
    rpc listProducts (ListProductsRequest) returns (stream ProductData);
    rpc GetProductInfo(Product) returns (ProductInfo);
    rpc UpdateStock(stream UpdateStockRequest) returns (UpdateStockResponse);
    rpc CheckStock(StockRequest) returns (StockResponse);
}

message getPriceRequest {
    string product_name = 1;
}

message getPriceResponse {
    float price = 1;
}

message ListProductsRequest {}

message ProductData {
    string name = 1;
    string category = 2;
}

message Product {
    string product_name = 1;
}

message ProductInfo {
    string prouductinformation = 1;
}

message UpdateStockRequest {
    string product_name = 1;
    int32 quantity = 2;
}

message UpdateStockResponse {
    bool success = 1;
}

message StockRequest {
    string product_name = 1;
    int32 quantity = 2;
}

message StockResponse {
    bool success = 1;
    string message = 2;
}